fixed styling on caaaard container to show all cards in wrapped rows, changed background from blue to black, text to white

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: whitesmoke;
 }
 
 a {
@@ -18,5 +19,11 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: black;
+}
+
+.crew-view {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
